cmake_minimum_required(VERSION 3.10)
set(PROJ_NAME udpns)
project(${PROJ_NAME} LANGUAGES C CXX)

set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)

if(WIN32)
add_executable(win_demo win_demo.cpp win_udpns.cpp win_udpns.h)
set_property(TARGET win_demo PROPERTY CXX_STANDARD 20)
set_property(TARGET win_demo PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET win_demo PROPERTY CXX_EXTENSIONS OFF)
set_property(TARGET win_demo PROPERTY C_STANDARD 11)
target_compile_options(win_demo PRIVATE -Wall -Wformat-overflow -Wextra -Wpedantic -pedantic-errors -Wall -Weffc++ -Wconversion -Wsign-conversion) # -Wno-c++98-compat
# target_compile_options(win_demo PRIVATE /W4 /WX /Oi /MT /permissive- /sdl)
target_link_libraries(win_demo ws2_32)
else()
add_executable(peer peer.cpp udpns.cpp udpns.h)
set_property(TARGET peer PROPERTY CXX_STANDARD 20)
set_property(TARGET peer PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET peer PROPERTY CXX_EXTENSIONS OFF)
set_property(TARGET peer PROPERTY C_STANDARD 11)
target_compile_options(peer PRIVATE -Wall -Wformat-overflow -Wextra -Wpedantic -pedantic-errors -Wall -Weffc++ -Wconversion -Wsign-conversion)
target_link_libraries(peer PRIVATE -pthread)
endif()
