cmake_minimum_required(VERSION 3.10)
set(PROJ_NAME udpns)
project(${PROJ_NAME} LANGUAGES C CXX)

set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
add_executable(peer peer.cpp udpns.cpp udpns.h)
set_property(TARGET peer PROPERTY CXX_STANDARD 20)
set_property(TARGET peer PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET peer PROPERTY CXX_EXTENSIONS OFF)
set_property(TARGET peer PROPERTY C_STANDARD 11)
target_compile_options(peer PRIVATE -Wall -Wformat-overflow -Wextra -Wpedantic -pedantic-errors -Wall -Weffc++ -Wconversion -Wsign-conversion)
if(WIN32)
target_link_libraries(peer PRIVATE ws2_32)
else()
target_link_libraries(peer PRIVATE -pthread)
endif()
