cmake_minimum_required(VERSION 3.10)
set(PROJ_NAME udpns)
project(${PROJ_NAME} LANGUAGES C CXX)
set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)

add_executable(peer_demo peer_demo.cpp udpns.cpp udpns.h)
set_property(TARGET peer_demo PROPERTY CXX_STANDARD 20)
set_property(TARGET peer_demo PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET peer_demo PROPERTY CXX_EXTENSIONS OFF)
set_property(TARGET peer_demo PROPERTY C_STANDARD 11)

if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    target_compile_options(peer_demo PRIVATE /W4 /Oi /MT /permissive- /sdl)
elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    target_compile_options(peer_demo PRIVATE -Wall -Wformat-overflow -Wextra -Wpedantic -pedantic-errors -Wall -Weffc++ -Wconversion -Wsign-conversion)
endif()

if(WIN32)
    target_link_libraries(peer_demo PRIVATE ws2_32)
    add_definitions(-DUDPNS_WINDOWS)
else()
    target_link_libraries(peer_demo -pthread)
endif()
